# ae_energy_shop_demo

./: .gitignore  Dockerfile  Procfile  app.py  chainlit.md  energy_shop_interface.py  energyshop.py  extract_params_from_bill.py  fly.toml  openai.tmp_py  pyproject.toml  requirements.txt  tmp_openai.tpy
.chainlit/: config.toml  config_old.toml
.chainlit/translations/: en-US.json
.files/1619713e-cd8b-47d5-86ee-f7d4e39a9caf/: d370924c-b987-4d14-9b41-08a870efa162.txt
public/: run.js  style.css
