[tool.poetry]
name = "ae_energy_shop_demo"
version = "0.1.0"
description = ""
authors = ["TomBers <tjcberman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
chainlit = "^1.0.401"
langchain = "^0.1.11"
langchain-community = "^0.0.27"
openai = "^1.13.3"
langchain-openai = "^0.0.8"
pypdf = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
